fix : Desktop title alignement

--- a/sass/restaurantHome.sass
+++ b/sass/restaurantHome.sass
@@ -6,6 +6,10 @@
   gap: 20px
   padding: 50px 0 70px 0
 
+  /*********** Desktop ***********/
+  @media only screen and (min-width: 1024px)
+    display: block
+
   /****** Cards ***********/
   &__groupCard
     display: flex
