--- a/sass/style.sass
+++ b/sass/style.sass
@@ -34,3 +34,7 @@ a
 
 .title 
   margin-left: 20px
+  /*********** Desktop ***********/
+  @media only screen and (min-width: 1024px)
+    max-width: 1024px // Limite la largeur maximale de la section
+    margin: 0 auto 30px auto
